--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,5 @@
 {
   "**/*.{js,jsx,ts,tsx,css,scss,md,mdx,html,json,jsonc}": [
-    "biome check --write --files-ignore-unknown=true"
+    "bash -c 'files=\"$@\"; echo \"$files\" | tr \" \" \"\\n\" | grep -vE \"(src/assets/icons|src/components/ui)\" | tr \"\\n\" \" \" | xargs -r biome check --write' --"
   ]
 }
