feat: refactor project configuration to use Rsbuild and Module Federation
- Updated workspace configuration to point to new Rsbuild config package.
- Added new scripts for Rsbuild development, build, and preview processes.
- Introduced enums for application and shared module configurations.
- Created a comprehensive Module Federation setup with dynamic port management.
- Implemented Google Fonts injection plugin for HTML Webpack Plugin.
- Established common, development, and production configurations for Rsbuild.
- Removed deprecated Webpack configuration files and types.
- Updated shared package to utilize new Rsbuild dependencies and configurations.
- Enhanced Turbo configuration to support new Rsbuild and Rspack commands.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -135,5 +135,6 @@
     "**/*.d.ts.map": true,
     "**/*.tsbuildinfo": true
   },
-  "biome.requireConfiguration": true
+  "biome.requireConfiguration": true,
+  "cSpell.words": ["rsbuild"]
 }
