--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
   "scripts": {
     "analyze": "turbo run analyze",
     "build": "turbo run build",
+    "rsbuild:dev": "turbo run rsbuild:dev",
+    "rsbuild:build": "turbo run rsbuild:build",
+    "rsbuild:preview": "turbo run rsbuild:preview",
+    "rspack:dev": "turbo run rspack:dev",
+    "rspack:build": "turbo run rspack:build",
+    "rspack:analyze": "turbo run rspack:analyze",
     "build:local": "cross-env HOST_BASE_URL=\"http://localhost:3333/\" turbo run build",
     "serve:local:remotes": "serve . -l 3333 -s --cors",
     "serve:local:main": "serve apps/main/dist -l 8080 -s --cors",
