--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,12 +4,14 @@
   "main": "./src/index.ts",
   "types": "./types/src/index.d.ts",
   "scripts": {
-    "analyze": "webpack --config webpack/webpack.prod.ts --env analyze",
+    "rsbuild:dev": "rsbuild dev --config rsbuild/rsbuild.config.ts",
+    "rsbuild:build": "rsbuild build --config rsbuild/rsbuild.config.ts",
+    "rsbuild:preview": "rsbuild preview --config rsbuild/rsbuild.config.ts",
+    "rspack:dev": "rspack serve --config rspack/rspack.dev.ts",
+    "rspack:build": "rspack build --config rspack/rspack.prod.ts",
+    "rspack:analyze": "rspack build --config rspack/rspack.prod.ts --env analyze",
     "predev": "rimraf dist",
-    "dev": "webpack serve --config webpack/webpack.dev.ts",
     "prebuild": "rimraf dist",
-    "build": "webpack --config webpack/webpack.prod.ts",
-    "types:generate": "webpack --config webpack/webpack.prod.ts --env typesOnly",
     "types:clean": "rimraf types .wp_federation",
     "types:build": "bun run types:clean && bun run types:generate",
     "biome:lint": "biome lint ./src",
@@ -50,11 +52,14 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@rsbuild/core": "^1.1.23",
+    "@rsbuild/plugin-react": "^1.1.1",
+    "@module-federation/rsbuild-plugin": "^0.18.4",
+    "@config/rsbuild-config": "workspace:*",
     "@babel/core": "^7.26.0",
     "@config/babel-config": "workspace:*",
     "@config/jest-config": "workspace:*",
     "@config/tsconfig": "workspace:*",
-    "@config/webpack-config": "workspace:*",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/jest": "^29.5.14",
