feat: remove rspack scripts and update build configurations to use rsbuild

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -7,12 +7,10 @@
     "rsbuild:dev": "rsbuild dev --config rsbuild/rsbuild.config.ts",
     "rsbuild:build": "rsbuild build --config rsbuild/rsbuild.config.ts",
     "rsbuild:preview": "rsbuild preview --config rsbuild/rsbuild.config.ts",
-    "rspack:dev": "rspack serve --config rspack/rspack.dev.ts",
-    "rspack:build": "rspack build --config rspack/rspack.prod.ts",
-    "rspack:analyze": "rspack build --config rspack/rspack.prod.ts --env analyze",
     "predev": "rimraf dist",
     "prebuild": "rimraf dist",
-    "types:clean": "rimraf types .wp_federation",
+    "types:generate": "rsbuild build --config rsbuild/rsbuild.config.ts",
+    "types:clean": "rimraf dist/@mf-types types .wp_federation",
     "types:build": "bun run types:clean && bun run types:generate",
     "biome:lint": "biome lint ./src",
     "biome:format": "biome format ./src --write",
