--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -7,9 +7,6 @@
     "rsbuild:dev": "rsbuild dev --config rsbuild/rsbuild.config.ts",
     "rsbuild:build": "rsbuild build --config rsbuild/rsbuild.config.ts",
     "rsbuild:preview": "rsbuild preview --config rsbuild/rsbuild.config.ts",
-    "rspack:dev": "rspack serve --config rspack/rspack.dev.ts",
-    "rspack:build": "rspack build --config rspack/rspack.prod.ts",
-    "rspack:analyze": "rspack build --config rspack/rspack.prod.ts --env analyze",
     "predev": "rimraf dist",
     "prebuild": "rimraf dist",
     "biome:lint": "biome lint ./src",
@@ -19,8 +16,8 @@
     "test": "jest",
     "test:ci": "jest --ci --coverage",
     "test:watch": "jest --watch",
-    "types:generate": "webpack --config webpack/webpack.prod.ts --env typesOnly",
-    "types:clean": "rimraf .wp_federation",
+    "types:generate": "rsbuild build --config rsbuild/rsbuild.config.ts",
+    "types:clean": "rimraf dist/@mf-types .wp_federation",
     "types:build": "bun run types:clean && bun run types:generate"
   },
   "dependencies": {
