--- a/package.json
+++ b/package.json
@@ -11,17 +11,15 @@
   ],
   "scripts": {
     "analyze": "turbo run analyze",
+    "dev": "turbo run dev",
     "build": "turbo run build",
-    "rsbuild:dev": "turbo run rsbuild:dev",
-    "rsbuild:build": "turbo run rsbuild:build",
-    "rsbuild:preview": "turbo run rsbuild:preview",
+    "preview": "turbo run rsbuild:preview",
     "build:local": "cross-env HOST_BASE_URL=\"http://localhost:3333/\" turbo run build",
     "serve:local:remotes": "serve . -l 3333 -s --cors",
-    "serve:local:main": "serve apps/main/dist -l 8080 -s --cors",
+    "serve:local:main": "serve apps/shell/dist -l 8080 -s --cors",
     "serve:local:start": "bun run serve:local:remotes & bun run serve:local:main",
     "serve:local": "bun run build:local && bun run serve:local:start",
     "serve": "bun run serve:local",
-    "dev": "turbo run dev",
     "types:generate": "turbo run types:generate",
     "types:build": "turbo run types:build",
     "biome:check": "turbo run biome:check",
