--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -7,7 +7,9 @@
     "dev": "rsbuild dev --config rsbuild/rsbuild.config.ts",
     "rsbuild:dev": "rsbuild dev --config rsbuild/rsbuild.config.ts",
     "build": "rsbuild build --config rsbuild/rsbuild.config.ts",
+    "rsbuild:build": "rsbuild build --config rsbuild/rsbuild.config.ts",
     "preview": "rsbuild preview --config rsbuild/rsbuild.config.ts",
+    "rsbuild:preview": "RSBUILD_MODE=preview rsbuild preview --config rsbuild/rsbuild.config.ts",
     "predev": "rimraf dist",
     "prebuild": "rimraf dist",
     "biome:lint": "biome lint ./src",
