--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -9,7 +9,8 @@
     "build": "rsbuild build --config rsbuild/rsbuild.config.ts",
     "rsbuild:build": "rsbuild build --config rsbuild/rsbuild.config.ts",
     "preview": "rsbuild preview --config rsbuild/rsbuild.config.ts",
-    "rsbuild:preview": "RSBUILD_MODE=preview rsbuild preview --config rsbuild/rsbuild.config.ts",
+    "rsbuild:preview": "rsbuild preview --config rsbuild/rsbuild.config.ts",
+    "serve:prod": "serve dist -s -l 3000 --cors",
     "predev": "rimraf dist",
     "prebuild": "rimraf dist",
     "biome:lint": "biome lint ./src",
