--- a/package.json
+++ b/package.json
@@ -13,13 +13,11 @@
     "analyze": "turbo run analyze",
     "dev": "turbo run dev",
     "build": "turbo run build",
-    "preview": "cross-env RSBUILD_MODE=preview turbo run rsbuild:preview",
+    "preview": "cross-env HOST_BASE_URL=\"http://localhost:3001/\" turbo run rsbuild:preview",
     "build:local": "cross-env HOST_BASE_URL=\"http://localhost:3333/\" turbo run build",
-    "serve:local:remotes": "serve . -l 3333 -s --cors",
-    "serve:local:main": "serve apps/shell/dist -l 8080 -s --cors",
-    "serve:local:start": "bun run serve:local:remotes & bun run serve:local:main",
-    "serve:local": "bun run build:local && bun run serve:local:start",
-    "serve": "bun run serve:local",
+    "build:prod": "cross-env NODE_ENV=production turbo run build",
+    "serve:prod": "turbo run serve:prod",
+    "start:prod": "bun run build:prod && bun run serve:prod",
     "types:generate": "turbo run types:generate",
     "types:build": "turbo run types:build",
     "biome:check": "turbo run biome:check",
