--- a/turbo.json
+++ b/turbo.json
@@ -18,12 +18,12 @@
     },
     "rsbuild:build": {
       "dependsOn": ["^rsbuild:build"],
-      "env": ["HOST_BASE_URL", "API_BASE_URL", "RSBUILD_MODE"],
+      "env": ["HOST_BASE_URL", "API_BASE_URL"],
       "outputs": ["dist/**", "build/**"]
     },
     "rsbuild:preview": {
       "dependsOn": ["rsbuild:build"],
-      "env": ["RSBUILD_MODE"],
+      "env": ["HOST_BASE_URL", "API_BASE_URL"],
       "persistent": true
     },
     "build:local": {
@@ -42,6 +42,10 @@
       "outputs": ["types/**", ".wp_federation/**"]
     },
     "serve:local": {
+      "persistent": true
+    },
+    "serve:prod": {
+      "dependsOn": ["build"],
       "persistent": true
     },
     "start": { "persistent": true },
