--- a/biome.json
+++ b/biome.json
@@ -4,7 +4,7 @@
   "files": {
     "includes": [
       "**",
-      "**/*.{ts,tsx,js,jsx}",
+      "**/*.{ts,tsx,js,jsx,json,jsonc}",
       "!node_modules",
       "!dist",
       "!build",
