--- a/biome.json
+++ b/biome.json
@@ -2,17 +2,7 @@
   "$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
   "root": true,
   "files": {
-    "includes": [
-      "**",
-      "**/*.{ts,tsx,js,jsx,json,jsonc}",
-      "!node_modules",
-      "!dist",
-      "!build",
-      "!coverage",
-      "!.wp_federation",
-      "!packages/shared/src/components/ui",
-      "!packages/shared/src/assets/icons"
-    ]
+    "includes": ["**/*.{ts,tsx,js,jsx,json,jsonc}"]
   },
   "formatter": {
     "enabled": true,
