--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "analyze": "turbo run analyze",
     "rsdoctor": "turbo run rsdoctor",
     "build": "turbo run build",
-    "build:local": "cross-env-shell \"HOST_BASE_URL=http://localhost:${REMOTES_PORT:-3333}/ turbo run build\"",
+    "build:local": "cross-env HOST_BASE_URL=\"http://localhost:3333/\" turbo run build",
+    "serve:local:remotes": "serve . -l 3333 -s --cors",
+    "serve:local:main": "serve apps/main/dist -l 8080 -s --cors",
+    "serve:local:start": "bun run serve:local:remotes && bun run serve:local:main",
+    "serve:local": "bun run build:local && bun run serve:local:start",
+    "serve": "bun run serve:local",
     "dev": "turbo run dev",
     "types:generate": "turbo run types:generate",
     "types:build": "turbo run types:build",
