[sc-63]: rspack migration (#12)

--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -4,24 +4,25 @@
   "main": "./src/Shell.tsx",
   "types": "./src/Shell.tsx",
   "scripts": {
-    "analyze": "rspack --config rspack/rspack.prod.ts --env analyze",
-    "rsdoctor": "RSDOCTOR=true bun run build",
+    "dev": "rsbuild dev --config rsbuild/rsbuild.config.ts",
+    "rsbuild:dev": "rsbuild dev --config rsbuild/rsbuild.config.ts",
+    "build": "rsbuild build --config rsbuild/rsbuild.config.ts",
+    "rsbuild:build": "rsbuild build --config rsbuild/rsbuild.config.ts",
+    "preview": "rsbuild preview --config rsbuild/rsbuild.config.ts",
+    "rsbuild:preview": "rsbuild preview --config rsbuild/rsbuild.config.ts",
+    "serve:prod": "serve dist -s -l 3000 --cors",
     "predev": "rimraf dist",
-    "dev": "rspack serve --config rspack/rspack.dev.ts",
     "prebuild": "rimraf dist",
-    "build": "rspack --config rspack/rspack.prod.ts",
     "biome:lint": "biome lint ./src",
     "biome:format": "biome format ./src --write",
     "biome:check": "biome check ./src",
     "biome:check:apply": "biome check ./src --write",
-    "test": "bun test",
-    "test:ci": "bun test --coverage",
-    "test:watch": "bun test --watch",
-    "typecheck": "tsc -p tsconfig.json --noEmit",
-    "types:generate": "rspack --config rspack/rspack.prod.ts --env typesOnly",
-    "types:clean": "rimraf .wp_federation",
-    "types:build": "bun run types:clean && bun run types:generate",
-    "serve:prod": "bunx serve -s dist -l $SHELL_PREVIEW_PORT"
+    "test": "jest",
+    "test:ci": "jest --ci --coverage",
+    "test:watch": "jest --watch",
+    "types:generate": "rsbuild build --config rsbuild/rsbuild.config.ts",
+    "types:clean": "rimraf dist/@mf-types .wp_federation",
+    "types:build": "bun run types:clean && bun run types:generate"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.62.8",
@@ -34,11 +35,9 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@config/babel-config": "workspace:*",
-    "@config/bun-test-config": "workspace:*",
-    "@config/rspack-config": "workspace:*",
+    "@config/jest-config": "workspace:*",
+    "@config/rsbuild-config": "workspace:*",
     "@config/tsconfig": "workspace:*",
-    "@rspack/cli": "^1.5.2",
-    "@rspack/core": "^1.5.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/jest": "^29.5.14",
@@ -47,6 +46,9 @@
     "@types/react-dom": "^19.0.2",
     "@types/react-helmet": "^6.1.11",
     "@types/webpack": "^5.28.5",
+    "@rsbuild/core": "^1.1.23",
+    "@rsbuild/plugin-react": "^1.1.1",
+    "@module-federation/rsbuild-plugin": "^0.18.4",
     "babel-loader": "^9.2.1",
     "copy-webpack-plugin": "^12.0.2",
     "dts-loader": "^0.1.8",
