--- a/package.json
+++ b/package.json
@@ -12,15 +12,12 @@
   ],
   "scripts": {
     "analyze": "turbo run analyze",
-    "rsdoctor": "turbo run rsdoctor",
+    "dev": "turbo run dev",
     "build": "turbo run build",
     "build:local": "cross-env HOST_BASE_URL=\"http://localhost:3333/\" turbo run build",
-    "serve:local:remotes": "serve . -l 3333 -s --cors",
-    "serve:local:main": "serve apps/main/dist -l 8080 -s --cors",
-    "serve:local:start": "bun run serve:local:remotes && bun run serve:local:main",
-    "serve:local": "bun run build:local && bun run serve:local:start",
-    "serve": "bun run serve:local",
-    "dev": "turbo run dev",
+    "build:prod": "cross-env NODE_ENV=production turbo run build",
+    "serve:prod": "turbo run serve:prod",
+    "start:prod": "bun run build:prod && bun run serve:prod",
     "types:generate": "turbo run types:generate",
     "types:build": "turbo run types:build",
     "biome:check": "turbo run biome:check",
