--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -141,27 +141,5 @@
     "**/*.tsbuildinfo": true
   },
   "biome.requireConfiguration": true,
-  "editor.codeActionsOnSaveTimeout": 10000,
-  "eslint.enable": false,
-  "cSpell.words": [
-    "Activo",
-    "Bloqueado",
-    "Canais",
-    "disponíveis",
-    "rspack",
-    "serviços",
-    "nodenext",
-    "Registrator",
-    "rsdoctor",
-    "rspack"
-  ],
-  // Coverage Gutters: find all MFEs' coverage outputs
-  // Search any coverage folder in the workspace for lcov.info
-  "coverage-gutters.coverageBaseDir": "**/coverage",
-  "coverage-gutters.coverageFileNames": ["lcov.info"],
-  // Start watching automatically when the workspace opens
-  "coverage-gutters.watchOnActivate": true,
-  // Show coverage in the gutter; leave line coverage off for breakpoint compatibility
-  "coverage-gutters.showGutterCoverage": true,
-  "coverage-gutters.showLineCoverage": false
+  "cSpell.words": ["rsbuild"]
 }
