--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,14 +4,17 @@
   "main": "./src/index.ts",
   "types": "./types/src/index.d.ts",
   "scripts": {
-    "analyze": "rspack --config rspack/rspack.prod.ts --env analyze",
-    "rsdoctor": "RSDOCTOR=true bun run build",
+    "dev": "rsbuild dev --config rsbuild/rsbuild.config.ts",
+    "rsbuild:dev": "rsbuild dev --config rsbuild/rsbuild.config.ts",
+    "build": "rsbuild build --config rsbuild/rsbuild.config.ts",
+    "rsbuild:build": "rsbuild build --config rsbuild/rsbuild.config.ts",
+    "preview": "rsbuild preview --config rsbuild/rsbuild.config.ts",
+    "rsbuild:preview": "rsbuild preview --config rsbuild/rsbuild.config.ts",
+    "serve:prod": "serve dist -s -l 3001 --cors",
     "predev": "rimraf dist",
-    "dev": "rspack serve --config rspack/rspack.dev.ts",
     "prebuild": "rimraf dist",
-    "build": "rspack --config rspack/rspack.prod.ts",
-    "types:generate": "rspack --config rspack/rspack.prod.ts --env typesOnly",
-    "types:clean": "rimraf types .wp_federation",
+    "types:generate": "rsbuild build --config rsbuild/rsbuild.config.ts",
+    "types:clean": "rimraf dist/@mf-types types .wp_federation",
     "types:build": "bun run types:clean && bun run types:generate",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "biome:lint": "biome lint ./src",
@@ -53,14 +56,15 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@rsbuild/core": "^1.1.23",
+    "@rsbuild/plugin-react": "^1.1.1",
+    "@module-federation/rsbuild-plugin": "^0.18.4",
+    "@config/rsbuild-config": "workspace:*",
     "@babel/core": "^7.26.0",
     "@config/babel-config": "workspace:*",
     "@config/bun-test-config": "workspace:*",
     "@config/rspack-config": "workspace:*",
     "@config/tsconfig": "workspace:*",
-    "@rsdoctor/rspack-plugin": "^1.2.3",
-    "@rspack/cli": "^1.5.2",
-    "@rspack/core": "^1.5.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/bun": "^1.2.21",
