--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -136,5 +136,5 @@
     "**/*.tsbuildinfo": true
   },
   "biome.requireConfiguration": true,
-  "cSpell.words": ["rsbuild"]
+  "cSpell.words": ["happydom", "registrator", "rsbuild"]
 }
