--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -17,9 +17,9 @@
     "biome:format": "biome format ./src --write",
     "biome:check": "biome check ./src",
     "biome:check:apply": "biome check ./src --write",
-    "test": "jest",
-    "test:ci": "jest --ci --coverage",
-    "test:watch": "jest --watch",
+    "test": "jest --passWithNoTests",
+    "test:ci": "jest --ci --coverage --passWithNoTests",
+    "test:watch": "jest --watch --passWithNoTests",
     "types:generate": "rsbuild build --config rsbuild/rsbuild.config.ts",
     "types:clean": "rimraf dist/@mf-types .wp_federation",
     "types:build": "bun run types:clean && bun run types:generate"
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@config/babel-config": "workspace:*",
-    "@config/jest-config": "workspace:*",
+    "@config/bun-test-config": "workspace:*",
     "@config/rsbuild-config": "workspace:*",
     "@config/tsconfig": "workspace:*",
     "@testing-library/jest-dom": "^6.6.3",
