--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -60,7 +60,7 @@
     "@config/rsbuild-config": "workspace:*",
     "@babel/core": "^7.26.0",
     "@config/babel-config": "workspace:*",
-    "@config/jest-config": "workspace:*",
+    "@config/bun-test-config": "workspace:*",
     "@config/tsconfig": "workspace:*",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
