feat: add comprehensive tests for Card, CardItemLabel, Icon, and Input components
- Introduced tests for Card component covering rendering, props, accessibility, and CSS classes.
- Added tests for CardItemLabel component ensuring correct rendering and styling.
- Implemented tests for Icon component including size variants, click handling, and accessibility.
- Created tests for Input component focusing on rendering, state management, and interaction.
- Removed unused InputWithLabel component and its associated tests and styles.
- Set up global test configurations for Bun and Happy DOM.
- Updated TypeScript configuration to include Bun types for testing.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -136,5 +136,5 @@
     "**/*.tsbuildinfo": true
   },
   "biome.requireConfiguration": true,
-  "cSpell.words": ["happydom", "registrator", "rsbuild"]
+  "cSpell.words": ["registrator", "rsbuild"]
 }
