--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -20,9 +20,9 @@
     "biome:format": "biome format ./src --write",
     "biome:check": "biome check ./src",
     "biome:check:apply": "biome check ./src --write",
-    "test": "jest",
-    "test:ci": "jest --ci --coverage",
-    "test:watch": "jest --watch"
+    "test": "bun test",
+    "test:ci": "bun test --coverage",
+    "test:watch": "bun test --watch"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -54,16 +54,17 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "@rsbuild/core": "^1.1.23",
-    "@rsbuild/plugin-react": "^1.1.1",
-    "@module-federation/rsbuild-plugin": "^0.18.4",
-    "@config/rsbuild-config": "workspace:*",
     "@babel/core": "^7.26.0",
     "@config/babel-config": "workspace:*",
     "@config/bun-test-config": "workspace:*",
+    "@config/rsbuild-config": "workspace:*",
     "@config/tsconfig": "workspace:*",
+    "@module-federation/rsbuild-plugin": "^0.18.4",
+    "@rsbuild/core": "^1.1.23",
+    "@rsbuild/plugin-react": "^1.1.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
+    "@types/bun": "^1.2.21",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.2",
