--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -140,6 +140,5 @@
     "**/*.d.ts.map": true,
     "**/*.tsbuildinfo": true
   },
-  "biome.requireConfiguration": true,
-  "cSpell.words": ["rsbuild"]
+  "biome.requireConfiguration": true
 }
