--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -4,15 +4,11 @@
   "main": "./src/Shell.tsx",
   "types": "./src/Shell.tsx",
   "scripts": {
-    "dev": "rsbuild dev --config rsbuild/rsbuild.config.ts",
-    "rsbuild:dev": "rsbuild dev --config rsbuild/rsbuild.config.ts",
-    "build": "rsbuild build --config rsbuild/rsbuild.config.ts",
-    "rsbuild:build": "rsbuild build --config rsbuild/rsbuild.config.ts",
-    "preview": "rsbuild preview --config rsbuild/rsbuild.config.ts",
-    "rsbuild:preview": "rsbuild preview --config rsbuild/rsbuild.config.ts",
-    "serve:prod": "serve dist -s -l 3000 --cors",
+    "analyze": "webpack --config webpack/webpack.prod.ts --env analyze",
     "predev": "rimraf dist",
+    "dev": "webpack serve --open --config webpack/webpack.dev.ts",
     "prebuild": "rimraf dist",
+    "build": "webpack --config webpack/webpack.prod.ts",
     "biome:lint": "biome lint ./src",
     "biome:format": "biome format ./src --write",
     "biome:check": "biome check ./src",
@@ -20,8 +16,8 @@
     "test": "jest",
     "test:ci": "jest --ci --coverage",
     "test:watch": "jest --watch",
-    "types:generate": "rsbuild build --config rsbuild/rsbuild.config.ts",
-    "types:clean": "rimraf dist/@mf-types .wp_federation",
+    "types:generate": "webpack --config webpack/webpack.prod.ts --env typesOnly",
+    "types:clean": "rimraf .wp_federation",
     "types:build": "bun run types:clean && bun run types:generate"
   },
   "dependencies": {
@@ -36,8 +32,8 @@
     "@babel/core": "^7.26.0",
     "@config/babel-config": "workspace:*",
     "@config/jest-config": "workspace:*",
-    "@config/rsbuild-config": "workspace:*",
     "@config/tsconfig": "workspace:*",
+    "@config/webpack-config": "workspace:*",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/jest": "^29.5.14",
@@ -46,9 +42,6 @@
     "@types/react-dom": "^19.0.2",
     "@types/react-helmet": "^6.1.11",
     "@types/webpack": "^5.28.5",
-    "@rsbuild/core": "^1.1.23",
-    "@rsbuild/plugin-react": "^1.1.1",
-    "@module-federation/rsbuild-plugin": "^0.18.4",
     "babel-loader": "^9.2.1",
     "copy-webpack-plugin": "^12.0.2",
     "dts-loader": "^0.1.8",
