feat(header-pages): initialize header pages app with routing and shared components (#17)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -135,6 +135,5 @@
     "**/*.d.ts.map": true,
     "**/*.tsbuildinfo": true
   },
-  "biome.requireConfiguration": true,
-  "cSpell.words": ["rsbuild"]
+  "biome.requireConfiguration": true
 }
