--- a/apps/header-pages/package.json
+++ b/apps/header-pages/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "shell",
+  "name": "header-pages",
   "version": "0.1.0",
-  "main": "./src/Shell.tsx",
-  "types": "./src/Shell.tsx",
+  "main": "./src/App.tsx",
+  "types": "./src/App.tsx",
   "scripts": {
     "analyze": "webpack --config webpack/webpack.prod.ts --env analyze",
     "predev": "rimraf dist",
