--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test:watch": "turbo run test:watch",
     "clean": "rimraf apps/*/node_modules packages/*/node_modules bun.lock node_modules",
     "prepare": "husky",
-    "preview": "cross-env-shell \"SHARED_HOST_BASE_URL=http://localhost:8081/ HEADER_PAGES_HOST_BASE_URL=http://localhost:8082/ turbo run build && bun run preview:serve\"",
+    "preview": "cross-env-shell \"SHARED_HOST_BASE_URL=http://localhost:8081/ HEADER_PAGES_HOST_BASE_URL=http://localhost:8082/ turbo run build --force && bun run preview:serve\"",
     "preview:serve": "concurrently -n shell,shared,header -c green,magenta,cyan \"cd apps/shell && bun run serve:prod\" \"cd packages/shared && bun run serve:prod\" \"cd apps/header-pages && bun run serve:prod\""
   },
   "devDependencies": {
@@ -39,7 +39,7 @@
     "concurrently": "^9.1.0",
     "lint-staged": "^15.5.2",
     "rimraf": "^6.0.1",
-    "serve": "^14.2.4",
+    "serve": "^14.2.5",
     "turbo": "^2.5.5"
   },
   "engines": {
