--- a/apps/header-pages/tsconfig.json
+++ b/apps/header-pages/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "include": ["./**/*", "**/*", "package.json"],
-  "exclude": ["build", "dist", "coverage", "node_modules"],
+  "exclude": ["build", "dist", "coverage", "node_modules", "rspack/**/*"],
   "extends": "@config/tsconfig",
   "compilerOptions": {
     "baseUrl": ".",
@@ -8,7 +8,8 @@
       "shared/*": [
         "../../packages/shared/.wp_federation/shared/*",
         "../../packages/shared/types/src/*"
-      ]
+      ],
+      "headerPages/*": [".wp_federation/headerPages/*"]
     }
   }
 }
