--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -16,6 +16,7 @@
     "test": "jest",
     "test:ci": "jest --ci --coverage",
     "test:watch": "jest --watch",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
     "types:generate": "rspack --config rspack/rspack.prod.ts --env typesOnly",
     "types:clean": "rimraf .wp_federation",
     "types:build": "bun run types:clean && bun run types:generate",
