--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "test": "turbo run test",
     "test:ci": "turbo run test:ci",
     "test:watch": "turbo run test:watch",
+    "typecheck": "turbo run typecheck",
+    "ci": "bun run types:build && bun run typecheck && bun run test:ci && bun run biome:check",
     "clean": "rimraf apps/*/node_modules packages/*/node_modules bun.lock node_modules",
     "prepare": "husky",
     "preview": "cross-env-shell \"SHARED_HOST_BASE_URL=http://localhost:8081/ HEADER_PAGES_HOST_BASE_URL=http://localhost:8082/ turbo run build --force && bun run preview:serve\"",
