[sc-67] rspack migration (#18)

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,12 +4,12 @@
   "main": "./src/index.ts",
   "types": "./types/src/index.d.ts",
   "scripts": {
-    "analyze": "webpack --config webpack/webpack.prod.ts --env analyze",
+    "analyze": "rspack --config rspack/rspack.prod.ts --env analyze",
     "predev": "rimraf dist",
-    "dev": "webpack serve --config webpack/webpack.dev.ts",
+    "dev": "rspack serve --config rspack/rspack.dev.ts",
     "prebuild": "rimraf dist",
-    "build": "webpack --config webpack/webpack.prod.ts",
-    "types:generate": "webpack --config webpack/webpack.prod.ts --env typesOnly",
+    "build": "rspack --config rspack/rspack.prod.ts",
+    "types:generate": "rspack --config rspack/rspack.prod.ts --env typesOnly",
     "types:clean": "rimraf types .wp_federation",
     "types:build": "bun run types:clean && bun run types:generate",
     "typecheck": "tsc -p tsconfig.json --noEmit",
@@ -17,10 +17,10 @@
     "biome:format": "biome format ./src --write",
     "biome:check": "biome check ./src",
     "biome:check:apply": "biome check ./src --write",
-    "test": "bun test",
-    "test:ci": "bun test --coverage",
-    "test:watch": "bun test --watch",
-    "serve:prod": "bunx serve -s dist -l $SHARED_PREVIEW_PORT"
+    "test": "jest",
+    "test:ci": "jest --ci --coverage",
+    "test:watch": "jest --watch",
+    "serve:prod": "serve -s dist -l ${SHARED_PREVIEW_PORT:-8081}"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -58,6 +58,8 @@
     "@config/rspack-config": "workspace:*",
     "@config/tsconfig": "workspace:*",
     "@config/webpack-config": "workspace:*",
+    "@rspack/cli": "^1.5.2",
+    "@rspack/core": "^1.5.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/bun": "^1.2.21",
