--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -140,5 +140,6 @@
     "**/*.d.ts.map": true,
     "**/*.tsbuildinfo": true
   },
-  "biome.requireConfiguration": true
+  "biome.requireConfiguration": true,
+  "cSpell.words": ["rspack"]
 }
