chore(tsconfig): fix interfaces and types

--- a/apps/header-pages/tsconfig.json
+++ b/apps/header-pages/tsconfig.json
@@ -6,6 +6,7 @@
     "baseUrl": ".",
     "paths": {
       "shared/*": [
+        "../../packages/shared/.wp_federation/shared/dts/src/*",
         "../../packages/shared/.wp_federation/shared/*",
         "../../packages/shared/types/src/*"
       ],
