--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -141,5 +141,7 @@
     "**/*.tsbuildinfo": true
   },
   "biome.requireConfiguration": true,
+  "editor.codeActionsOnSaveTimeout": 10000,
+  "eslint.enable": false,
   "cSpell.words": ["rspack"]
 }
