refactor: update testing setup for Bun compatibility
- Replace Jest's expect utilities with Vitest-compatible matchers in testing setup files.
- Remove unnecessary imports of '@testing-library/jest-dom' in individual test files.
- Adjust tests to use container-based assertions for rendering checks.
- Mock CSS imports in GlobalStyles tests to prevent runtime errors.
- Delete unused API utility functions and related exports from utils.
- Ensure proper cleanup and registration of Happy DOM globals in test setup.

--- a/apps/header-pages/package.json
+++ b/apps/header-pages/package.json
@@ -32,7 +32,7 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@config/babel-config": "workspace:*",
-    "@config/jest-config": "workspace:*",
+    "@config/bun-test-config": "workspace:*",
     "@config/tsconfig": "workspace:*",
     "@config/rspack-config": "workspace:*",
     "@rspack/cli": "^1.5.2",
