feat(tailwindCSS): add new class regex and enable emmet completions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,8 +42,11 @@
     "cva\\(([^)]*)\\)",
     "cx\\(([^)]*)\\)",
     "clsx\\(([^)]*)\\)",
-    "classnames\\(([^)]*)\\)"
+    "classnames\\(([^)]*)\\)",
+    "cn\\(([^)]*)\\)"
   ],
+  "tailwindCSS.experimental.configFile": "packages/shared/tailwind.config.js",
+  "tailwindCSS.emmetCompletions": true,
   "jest.runMode": "watch",
   "search.exclude": {
     "**/node_modules": true,
