--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -140,5 +140,5 @@
   "biome.requireConfiguration": true,
   "editor.codeActionsOnSaveTimeout": 10000,
   "eslint.enable": false,
-  "cSpell.words": ["rspack"]
+  "cSpell.words": ["Activo", "Bloqueado", "Canais", "disponíveis", "rspack", "serviços"]
 }
