feat(tests): add Channels and Services and state  tests

--- a/apps/header-pages/tsconfig.json
+++ b/apps/header-pages/tsconfig.json
@@ -4,6 +4,7 @@
   "extends": "@config/tsconfig",
   "compilerOptions": {
     "baseUrl": ".",
+    "types": ["jest", "@testing-library/jest-dom"],
     "paths": {
       "shared/*": [
         "../../packages/shared/.wp_federation/shared/dts/src/*",
