feat: add rsdoctor script and integrate RsdoctorRspackPlugin
- Added a new script "rsdoctor" to package.json.
- Included @rsdoctor/rspack-plugin as a dependency in rspack-config and shared packages.
- Integrated RsdoctorRspackPlugin into rspack.common.ts, conditionally.
- Updated SharedModulesConfig type to include optional eager and strictVersion
- Enhanced shared rspack configuration to support eager loading for react-dom and react-dom/client.
- Updated turbo.json to include rsdoctor task dependencies.

--- a/apps/header-pages/package.json
+++ b/apps/header-pages/package.json
@@ -5,6 +5,7 @@
   "types": "./src/App.tsx",
   "scripts": {
     "analyze": "rspack --config rspack/rspack.prod.ts --env analyze",
+    "rsdoctor": "RSDOCTOR=true bun run build",
     "predev": "rimraf dist",
     "dev": "rspack serve --config rspack/rspack.dev.ts",
     "prebuild": "rimraf dist",
