--- a/packages/@config/rspack-config/package.json
+++ b/packages/@config/rspack-config/package.json
@@ -17,6 +17,7 @@
     "workbox-webpack-plugin": "^7.3.0"
   },
   "devDependencies": {
+    "@rsdoctor/rspack-plugin": "^1.2.3",
     "@rspack/cli": "^1.5.2",
     "@rspack/core": "^1.5.2",
     "typescript": "^5.7.2"
