--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,6 +5,7 @@
   "types": "./types/src/index.d.ts",
   "scripts": {
     "analyze": "rspack --config rspack/rspack.prod.ts --env analyze",
+    "rsdoctor": "RSDOCTOR=true bun run build",
     "predev": "rimraf dist",
     "dev": "rspack serve --config rspack/rspack.dev.ts",
     "prebuild": "rimraf dist",
@@ -57,6 +58,7 @@
     "@config/jest-config": "workspace:*",
     "@config/tsconfig": "workspace:*",
     "@config/webpack-config": "workspace:*",
+    "@rsdoctor/rspack-plugin": "^1.2.3",
     "@rspack/cli": "^1.5.2",
     "@rspack/core": "^1.5.2",
     "@testing-library/jest-dom": "^6.6.3",
