refactor(buntest): testing library setup for Bun compatibility
-update icon SVG attributes, and remove unused test setup file
- Updated testing-library.ts to dynamically require Bun test globals and extend
matchers for Bun environment.
- Changed clip-path attributes to clipPath in multiple icon components for consistency
with JSX syntax.
- Removed the test-setup.ts file as it was no longer needed.
- Adjusted turbo.json to disable caching for test tasks.

--- a/apps/header-pages/tsconfig.json
+++ b/apps/header-pages/tsconfig.json
@@ -3,6 +3,7 @@
   "exclude": ["build", "dist", "coverage", "node_modules", "rspack/**/*"],
   "extends": "@config/tsconfig",
   "compilerOptions": {
+    "types": ["bun-types", "jest", "node"],
     "baseUrl": ".",
     "paths": {
       "shared/*": [
