--- a/bunfig.toml
+++ b/bunfig.toml
@@ -33,9 +33,9 @@ coveragePathIgnorePatterns = [
 
 # Ensure DOM globals exist, then run unified setup (matchers + cleanup)
 preload = [
-	"./packages/@config/bun-test-config/happydom.ts",
-	"./packages/@config/bun-test-config/setup-tests.ts",
-	"./packages/@config/bun-test-config/testing-library.ts"
+	"@config/bun-test-config/happydom.ts",
+	"@config/bun-test-config/setup-tests.ts",
+	"@config/bun-test-config/testing-library.ts"
 ]
 
 [build]
