--- a/turbo.json
+++ b/turbo.json
@@ -64,7 +64,8 @@
       "dependsOn": ["^biome:check:apply"]
     },
     "test": {
-      "dependsOn": ["^test"]
+      "dependsOn": ["^test"],
+      "cache": false
     },
     "test:ci": {
       "dependsOn": ["^test:ci"],
