--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -13,8 +13,8 @@
     "biome:format": "biome format ./src --write",
     "biome:check": "biome check ./src",
     "biome:check:apply": "biome check ./src --write",
-    "test": "bun  test",
-    "test:ci": "bun --coverage",
+    "test": "bun test",
+    "test:ci": "bun test --coverage",
     "test:watch": "bun test --watch",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "types:generate": "rspack --config rspack/rspack.prod.ts --env typesOnly",
