--- a/packages/@config/rspack-config/package.json
+++ b/packages/@config/rspack-config/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@config/rspack-config",
   "version": "1.0.0",
+  "main": "index.ts",
   "dependencies": {
+    "@rspack/core": "^1.5.2",
     "@types/node": "^22.10.2",
     "@types/webpack": "^5.28.5",
     "@types/webpack-bundle-analyzer": "^4.7.0",
