--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -143,5 +143,14 @@
   "biome.requireConfiguration": true,
   "editor.codeActionsOnSaveTimeout": 10000,
   "eslint.enable": false,
-  "cSpell.words": ["Activo", "Bloqueado", "Canais", "disponíveis", "rspack", "serviços"]
+  "cSpell.words": [
+    "Activo",
+    "Bloqueado",
+    "Canais",
+    "disponíveis",
+    "rspack",
+    "serviços",
+    "nodenext",
+    "Registrator"
+  ]
 }
