--- a/bunfig.toml
+++ b/bunfig.toml
@@ -27,16 +27,13 @@ coveragePathIgnorePatterns = [
 	"**/assets/**",
   "**/@config/**",
   "**/types/**",
-  "**/__mocks__/**",
-  "**/e2e/**",
 ]
 
 # Ensure DOM globals exist, then run unified setup (matchers + cleanup)
 preload = [
 	"@config/bun-test-config/happydom.ts",
 	"@config/bun-test-config/setup-tests.ts",
-	"@config/bun-test-config/testing-library.ts",
-  "./packages/@config/bun-test-config/__mocks__/shared-modules.ts"
+	"@config/bun-test-config/testing-library.ts"
 ]
 
 [build]
