--- a/packages/shared/bunfig.toml
+++ b/packages/shared/bunfig.toml
@@ -1,19 +1,15 @@
 [test]
 coverage = true
-coverageReporter = [ "text", "lcov", ]
 
 coveragePathIgnorePatterns = [
   "**/assets/**",
   "**/@config/**",
   "**/types/**",
-  "**/components/ui/**",
-  "**/__mocks__/**",
-  "**/e2e/**",
+  "**/components/ui/**"
 ]
 
 preload = [
   "../../packages/@config/bun-test-config/happydom.ts",
   "../../packages/@config/bun-test-config/setup-tests.ts",
-  "../../packages/@config/bun-test-config/testing-library.ts",
-  "../@config/bun-test-config/__mocks__/shared-modules.ts"
+  "../../packages/@config/bun-test-config/testing-library.ts"
 ]
