feat(coverage): update coverage settings and add coverage reporter configuration

--- a/bunfig.toml
+++ b/bunfig.toml
@@ -23,6 +23,7 @@ registry = "https://registry.npmjs.org/"
 # Test runner configuration (Bun can run Jest tests)
 # Coverage settings
 coverage = true
+coverageReporter = [ "text", "lcov", ]
 
 # Exclude assets from coverage across the monorepo
 coveragePathIgnorePatterns = [
