--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
   "recommendations": [
+    "ryanluker.vscode-coverage-gutters",
     "bradlc.vscode-tailwindcss",
     "dbaeumer.vscode-eslint",
     "biomejs.biome",
