feat(tests): implement centralized mocks for testing and improve coverage settings

--- a/apps/header-pages/bunfig.toml
+++ b/apps/header-pages/bunfig.toml
@@ -5,6 +5,7 @@ coverageReporter = [ "text", "lcov", ]
 coveragePathIgnorePatterns = [
   "**/@config/**",
   "**/types/**",
+  "**/__mocks__/**",
 ]
 
 # Ensure DOM globals exist, then run unified setup (matchers + cleanup)
