--- a/packages/shared/bunfig.toml
+++ b/packages/shared/bunfig.toml
@@ -6,7 +6,8 @@ coveragePathIgnorePatterns = [
   "**/assets/**",
   "**/@config/**",
   "**/types/**",
-  "**/components/ui/**"
+  "**/components/ui/**",
+  "**/__mocks__/**",
 ]
 
 preload = [
