--- a/apps/shell/bunfig.toml
+++ b/apps/shell/bunfig.toml
@@ -6,6 +6,7 @@ coverageReporter = [ "text", "lcov", ]
 coveragePathIgnorePatterns = [
   "**/@config/**",
   "**/types/**",
+  "**/__mocks__/**",
 ]
 # Ensure DOM globals exist, then run unified setup (matchers + cleanup)
 preload = [
