--- a/bunfig.toml
+++ b/bunfig.toml
@@ -30,6 +30,7 @@ coveragePathIgnorePatterns = [
 	"**/assets/**",
   "**/@config/**",
   "**/types/**",
+  "**/__mocks__/**",
 ]
 
 # Ensure DOM globals exist, then run unified setup (matchers + cleanup)
