[sc-40] vision 360 complains and incidents (#25)

--- a/bunfig.toml
+++ b/bunfig.toml
@@ -27,6 +27,7 @@ coveragePathIgnorePatterns = [
 	"**/assets/**",
   "**/@config/**",
   "**/types/**",
+  "**/__mocks__/**",
 ]
 
 # Ensure DOM globals exist, then run unified setup (matchers + cleanup)
