feat: integrate React Query and update Shell component
- Added QueryClientProvider to Shell component for React Query integration.
- Updated Shell component to use the new query client from shared queries.
- Registered HeaderPages component with error boundary for better error handling.
- Refactored routes in Shell component for improved structure.

chore: update dependencies in bun.lock

- Upgraded axios to version 1.12.2.

chore: update workspace paths

- Adjusted paths in the workspace configuration for Shell, Header Pages, and Shared Components.

refactor: remove unused webpack config files and enums

- Deleted unused enums and module federation configuration files from webpack config.
- Removed Google Fonts plugin and related configurations.

feat: add query client to shared queries

- Created a new query client in shared queries for centralized query management.

--- a/apps/header-pages/package.json
+++ b/apps/header-pages/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.62.8",
+    "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-helmet": "^6.1.0",
