chore: update serve commands to use bunx for consistency across projects

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -21,7 +21,7 @@
     "test": "bun test",
     "test:ci": "bun test --coverage",
     "test:watch": "bun test --watch",
-    "serve:prod": "serve -s dist -l ${SHARED_PREVIEW_PORT:-8081}"
+    "serve:prod": "bunx serve -s dist -l $SHARED_PREVIEW_PORT"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
