--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -21,7 +21,7 @@
     "types:generate": "rspack --config rspack/rspack.prod.ts --env typesOnly",
     "types:clean": "rimraf .wp_federation",
     "types:build": "bun run types:clean && bun run types:generate",
-    "serve:prod": "serve -s dist -l ${SHELL_PREVIEW_PORT:-8080}"
+    "serve:prod": "bunx serve -s dist -l $SHELL_PREVIEW_PORT"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.62.8",
