--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "ci": "bun run types:build && bun run typecheck && bun run test:ci && bun run biome:check",
     "clean": "rimraf apps/*/node_modules packages/*/node_modules bun.lock node_modules",
     "prepare": "husky",
-    "preview": "cross-env-shell \"SHELL_PREVIEW_PORT=8080 SHARED_PREVIEW_PORT=8081 HEADER_PAGES_PREVIEW_PORT=8082 SHARED_HOST_BASE_URL=http://localhost:8081/ HEADER_PAGES_HOST_BASE_URL=http://localhost:8082/ turbo run build --force && bun run preview:serve\"",
-    "preview:serve": "cross-env SHELL_PREVIEW_PORT=8080 SHARED_PREVIEW_PORT=8081 HEADER_PAGES_PREVIEW_PORT=8082 concurrently -n shell,shared,header -c green,magenta,cyan \"cd apps/shell && bun run serve:prod\" \"cd packages/shared && bun run serve:prod\" \"cd apps/header-pages && bun run serve:prod\"",
-    "preview:serve:win": "concurrently -n shell,shared,header -c green,magenta,cyan \"cd apps/shell && serve -s dist -l 8080\" \"cd packages/shared && serve -s dist -l 8081\" \"cd apps/header-pages && serve -s dist -l 8082\""
+    "preview": "bunx cross-env-shell \"SHELL_PREVIEW_PORT=8080 SHARED_PREVIEW_PORT=8081 HEADER_PAGES_PREVIEW_PORT=8082 SHARED_HOST_BASE_URL=http://localhost:8081/ HEADER_PAGES_HOST_BASE_URL=http://localhost:8082/ turbo run build --force && bun run preview:serve\"",
+    "preview:serve": "concurrently --kill-others-on-fail -n shell,shared,header -c green,magenta,cyan \"cd apps/shell && bunx serve -s dist -l 8080\" \"cd packages/shared && bunx serve -s dist -l 8081\" \"cd apps/header-pages && bunx serve -s dist -l 8082\"",
+    "preview:serve:win": "concurrently -n shell,shared,header -c green,magenta,cyan \"cd apps/shell && bunx serve -s dist -l 8080\" \"cd packages/shared && bunx serve -s dist -l 8081\" \"cd apps/header-pages && bunx serve -s dist -l 8082\""
   },
   "devDependencies": {
     "dotenv-cli": "^7.4.2",
