--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "test:ci": "turbo run test:ci",
     "test:watch": "turbo run test:watch",
     "e2e": "turbo run e2e --filter=e2e",
+    "e2e:headed": "turbo run e2e:headed --filter=e2e",
     "e2e:show-report": "turbo run e2e:show-report --filter=e2e",
     "typecheck": "turbo run typecheck",
     "ci": "bun run types:build && bun run typecheck && bun run test:ci && bun run biome:check",
